fix text area bug

--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@
   <input type="text" placeholder=" Reason for Contacting  " class="common-input"><span class="astric-reason">&#42;</span>
   <input type="text"  placeholder=" Phone " class="common-input">
 </div>
-<div>
 
-<textarea id="text-area-message" placeholder="Messages" rows="7" cols="64">
+
+<textarea id="text-area-message" placeholder="Messages" rows="7" cols="62">
 </textarea>
-<p><span class="astric">&#42;</span>  Indicates a required field</p>
+<p id="text-means"><span class="astric">&#42;</span>  Indicates a required field</p>
 </div>
 <div class="submit">Submit</div>
  </section>
